updated twitter name

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   bio: "Programmer/Electronics Hacker/Photographer/Writer from Bangalore."
   email: info@electronut.in
   disqus-shortname: electronutin
-  twitter: electronutIN
+  twitter: electronutLabs
   github: electronut
   flickr: tat-tvam-asi
   facebook: #username
