updated tag line

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: electronut Labs
   avatar: 1px.png
-  bio: "Cool Hardware & Projects for Makers worldwide."
+  bio: "Cool Hardware & Awesome Projects for Makers worldwide."
   email: info@electronut.in
   disqus-shortname: electronutin
   twitter: electronutLabs
