--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              http://electronut.in
 
 permalink:   /:title/
 markdown:    kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
