--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -9,4 +9,4 @@
     - name: bluey
       path: bluey/
     - name: snapVCC
-      path: https://www.crowdsupply.com/electronut-labs/snapvcc
+      path: https://www.tindie.com/products/ElectronutLabs/snapvcc-335-v-regulator-snaps-onto-9v-battery/
