--- a/_data/members.yml
+++ b/_data/members.yml
@@ -25,7 +25,7 @@
     - link: https://twitter.com/SivaPrakazh
       icon: twitter
   desc:
-    Siva is a Jedi at soldering. Ha takes care of all our PCB design and electronics prototyping. 
+    Siva is a Jedi at soldering. He takes care of all our PCB design and electronics prototyping. 
     His favourite activities are wrestling with kicad and watching quality
     Tamil movies.
 - avatar: /images/rishi.jpg
